--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
 		"illuminate/container": "4.0.*",
+		"illuminate/translation": "4.0.*",
 		"satooshi/php-coveralls": "~0.6"
 	},
 	"suggest": {
