--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,10 @@
 		}
 	},
 	"require": {
-		"php": ">=5.3.3",
-		"orchestra/support": "2.0.*"
+		"php": ">=5.3.3"
 	},
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
-		"illuminate/container": "4.0.*",
 		"illuminate/translation": "4.0.*",
 		"satooshi/php-coveralls": "~0.6"
 	},
