--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
 	},
 	"require-dev": {
 		"mockery/mockery": "0.8.0",
-		"illuminate/translation": "4.0.*",
-		"satooshi/php-coveralls": "~0.6"
+		"illuminate/translation": "4.0.*"
 	},
 	"suggest": {
 		"laravel/framework": "Allow using orchestra/translation component outside of Orchestra Platform 2",
