--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
 		}
 	],
 	"autoload": {
-		"psr-0": { 
-			"Orchestra\\Translation" : "src/" 
+		"psr-0": {
+			"Orchestra\\Translation" : "src/"
 		}
 	},
 	"require": {
@@ -24,8 +24,7 @@
 		"illuminate/translation": "4.0.*"
 	},
 	"suggest": {
-		"laravel/framework": "Allow using orchestra/translation component outside of Orchestra Platform 2",
-		"orchestra/foundation": "Allow using orchestra/translation with Orchestra Platform 2"
+		"laravel/framework": "Allow using orchestra/translation as added feature to illuminate/translation",
 	},
 	"extra": {
 		"branch-alias": {
