Deprecate this package since it been added to Laravel 4.1. Closes #1.
Signed-off-by: crynobone <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "orchestra/translation",
-	"description": "Orchestra Platform 2 Translation Component",
+	"description": "[Deprecated] Orchestra Platform 2 Translation Component",
 	"license": "MIT",
 	"homepage": "http://orchestraplatform.com/docs/2.0/components/translation/",
 	"keywords": ["orchestra-platform", "orchestral", "laravel", "translation"],
