--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "orchestra/translation",
 	"description": "Orchestra Platform 2 Translation Component",
 	"license": "MIT",
-	"homepage": "http://orchestraplatform.com/docs/2.0/components/translation/",
+	"homepage": "http://orchestraplatform.com/docs/latest/components/translation/",
 	"keywords": ["orchestra-platform", "orchestral", "laravel", "translation"],
 	"authors": [
 		{
@@ -20,7 +20,7 @@
 		"php": ">=5.3.3"
 	},
 	"require-dev": {
-		"mockery/mockery": "0.8.0",
+		"mockery/mockery": "0.8.*",
 		"illuminate/translation": "4.1.*"
 	},
 	"suggest": {
