--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 	},
 	"require-dev": {
 		"mockery/mockery": "0.9.*",
+		"illuminate/http": "5.0.*",
 		"illuminate/translation": "5.0.*"
 	},
 	"suggest": {
