--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     },
     "require": {
-        "php": ">=5.5.0"
+        "php": ">=5.5.0",
+        "illuminate/translation": "~5.1.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
-        "illuminate/http": "~5.1.0",
-        "illuminate/translation": "~5.1.0"
+        "illuminate/http": "~5.1.0"
     },
     "suggest": {
         "laravel/framework": "Allow using orchestra/translation as added feature to illuminate/translation (~5.1)."
