--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "illuminate/translation": "~5.3.0"
     },
     "require-dev": {
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "^0.9.4",
         "illuminate/http": "~5.3.0"
     },
     "suggest": {
