--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "illuminate/translation": "~5.3.0"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.4",
-        "illuminate/http": "~5.3.0"
+        "illuminate/http": "~5.3.0",
+        "mockery/mockery": "^0.9.4"
     },
     "suggest": {
         "laravel/framework": "Allow using orchestra/translation as added feature to illuminate/translation (~5.3)."
@@ -31,6 +31,9 @@
         "branch-alias": {
             "dev-master": "3.3-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
     },
     "minimum-stability": "dev"
 }
