--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         }
     },
     "require": {
-        "php": ">=7.0",
+        "php": ">=7.1",
         "illuminate/translation": "~5.6.0"
     },
     "require-dev": {
         "illuminate/http": "~5.6.0",
-        "mockery/mockery": "^0.9.4",
+        "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
     },
     "extra": {
