--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,18 @@
             "Orchestra\\Translation\\" : "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Orchestra\\Translation\\TestCase\\" : "tests/"
+        }
+    },
     "require": {
         "php": ">=7.1",
         "illuminate/translation": "~5.6.0"
     },
     "require-dev": {
-        "illuminate/http": "~5.6.0",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0"
+        "orchestra/testbench": "~3.6.1"
     },
     "extra": {
         "branch-alias": {
