--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "illuminate/translation": "~5.6.0"
     },
     "require-dev": {
-        "mockery/mockery": "~1.0",
+        "mockery/mockery": "^1.0",
         "orchestra/testbench": "~3.6.2"
     },
     "extra": {
