Prepare master branch.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
     },
     "require": {
         "php": ">=7.1",
-        "illuminate/translation": "~5.7.0"
+        "illuminate/translation": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "orchestra/testbench": "~3.7.0"
+        "orchestra/testbench": "~3.8.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.7-dev"
+            "dev-master": "3.8-dev"
         }
     },
     "config": {
