--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "require": {
         "php": ">=7.1",
-        "illuminate/translation": "dev-master"
+        "illuminate/translation": "~5.8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
