--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,11 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.2",
-        "orchestra/testbench": "~3.10.0"
+        "orchestra/testbench": "^4.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.10-dev"
+            "dev-master": "4.0-dev"
         }
     },
     "config": {
