--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     },
     "require": {
         "php": ">=7.2",
-        "illuminate/translation": "^7.0"
+        "illuminate/translation": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.1",
-        "orchestra/testbench": "^5.0"
+        "orchestra/testbench": "dev-master"
     },
     "config": {
         "sort-packages": true
